--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0"
+    "@actions/core": "^1.6.0",
+    "@aws-sdk/client-ecr": "^3.45.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.7",
