--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,15 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'AWS ECR Create'
+description: 'auto create aws ecr repository'
+author: 'lwnmengjing'
 inputs:
-  milliseconds: # change this
+  aws-region: # change this
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'aws region'
+    default: ''
+  repository-name: # change this
+    required: true
+    description: 'aws ecr repository name'
+    default: ''
 runs:
   using: 'node12'
   main: 'dist/index.js'
